# stealth-priming

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/: scenarios.json  sys_prompts.json
outputs/: audit_per_pair.jsonl  calibration_rec.csv  cell_index.json  h_layer48.pt  projections_pvp_roll.csv  projections_pvp_sys.csv  v_s_layer48.pt
reports/: REPRODUCIBILITY.md
scripts/: 00_fetch_rollouts.py  01_generate_basis.py  02_rollouts.py  03_judge_rollouts.py  04_logprobs.py  04b_join_logprobs.py  05_audit_basis.py  06_pvp_sys_prompt.py  07_pvp_rollouts.py  08_paper_plots.py
src/: audit_prompts.py  contrastive.py  helpers.py  judge_v2.py  persona_vec.py  vllm_runner.py  vllm_worker.py
